# ab2017-dpyo

./: ITP örnek  Kullanılan Kodlar  README.md
AB-girl/girl-9.7.1/data/: Makefile  Makefile.am  Makefile.in  girl.appdata.xml.in
AB-girl/girl-9.7.1/data/icons/: Makefile  Makefile.in
AB-girl/girl-9.7.1/data/icons/1024x1024/: Makefile.in
AB-girl/girl-9.7.1/data/icons/16x16/: Makefile  Makefile.in
AB-girl/girl-9.7.1/data/icons/22x22/: Makefile.in
AB-girl/girl-9.7.1/data/icons/24x24/: Makefile.in
AB-girl/girl-9.7.1/data/icons/32x32/: Makefile
AB-girl/girl-9.7.1/data/icons/512x512/: Makefile.am  Makefile.in
AB-girl/girl-9.7.1/data/pixmaps/: Makefile  Makefile.in
ornek/girl/girl-9.7.1/src/: Makefile.am  girl  girl-5.0.dtd  girl-canvas.h  girl-listener.c  girl-player-backend.c  girl-player-backend.h  girl-player-frontend.h  girl-program.c  girl-record-backend.c  girl-record-backend.h  girl-runners.h  girl-stations-map.h  listener-1.1.dtd  listeners.xml  test-stations
ornek/girl/girl-9.8.0/: AUTHORS  DEBIAN  HACKING  NEWS  NEWS-0.5  NEWS-0.8  NEWS-1.0  NEWS-1.1  NEWS-1.2  NEWS-1.4  README  TODO  YP-DIRS  configure.ac  girl.spec  girl.spec.in
ornek/girl/girl-9.8.0/data/: Makefile  Makefile.in  girl.appdata.xml  girl.appdata.xml.in  girl.desktop.in  girl.desktop.in.in
ornek/girl/girl-9.8.0/data/icons/: Makefile  Makefile.in
ornek/girl/girl-9.8.0/data/icons/1024x1024/: Makefile  Makefile.in
ornek/girl/girl-9.8.0/data/icons/16x16/: Makefile  Makefile.am  Makefile.in
ornek/girl/girl-9.8.0/data/icons/22x22/: Makefile  Makefile.am  Makefile.in
ornek/girl/girl-9.8.0/data/icons/24x24/: Makefile  Makefile.in
ornek/girl/girl-9.8.0/data/icons/256x256/: Makefile  Makefile.in
ornek/girl/girl-9.8.0/data/icons/32x32/: Makefile  Makefile.in
ornek/girl/girl-9.8.0/data/icons/48x48/: Makefile  Makefile.am  Makefile.in
ornek/girl/girl-9.8.0/data/icons/512x512/: Makefile  Makefile.in
ornek/girl/girl-9.8.0/data/pixmaps/: Makefile  Makefile.am  Makefile.in
ornek/girl/girl-9.8.0/debian/: README.Debian  README.source  changelog  control  files  girl.substvars  watch
ornek/girl/girl-9.8.0/debian/girl/DEBIAN/: control  md5sums
ornek/girl/girl-9.8.0/help/: Makefile  Makefile.am  Makefile.in  girl.pot
ornek/girl/girl-9.8.0/help/C/: Makefile  intro.page  next.page  prev.page
ornek/girl/girl-9.8.0/help/cs/: aboutprogram.page  cs.po  index.page  legal.xml  stations.page
ornek/girl/girl-9.8.0/help/de/: de.po  index.page  new.page
ornek/girl/girl-9.8.0/help/en_US/: en_US.mo  listen.page  search.page  stations.page
ornek/girl/girl-9.8.0/help/es/: aboutstation.page  new.page  search.page
ornek/girl/girl-9.8.0/help/sv/: aboutstation.page  legal.xml  listen.page  new.page  next.page  prev.page  search.page  sv.po
ornek/girl/girl-9.8.0/man/: Makefile  Makefile.in
ornek/girl/girl-9.8.0/po/: LINGUAS  POTFILES.skip  bs.po  cs.po  es.po  girl.pot  hu.po  is.po  pl.po  pt_BR.po  sl.po  sr.po  sv.po  tr.po
ornek/girl/girl-9.8.0/src/: Makefile  Makefile.am  Makefile.in  girl  girl-0.1.dtd  girl-0.2.dtd  girl-0.3.dtd  girl-0.4.dtd  girl-0.5.dtd  girl-0.6.dtd  girl-0.8.dtd  girl-1.0.dtd  girl-9.3.dtd  girl-canvas.c  girl-gui.c  girl-gui.h  girl-listener.h  girl-player-globals.h  girl-player.c  girl-record-frontend.c  girl-record-frontend.h  girl-record-globals.h  girl-record.h  girl-runners.c  girl-station.c  girl-station.h  girl-streams.h  girl.c  girl.h  listener-1.0.dtd  programs-0.1.dtd  programs.xml  stations.xml  test-endianess  test-stations  test-stations-gfx  test-stations-gfx.c  test-stations.c
ornek/sayonara/sayonara-0.9.2/: CMakeLists.txt  MANUAL  README.txt  license.txt
ornek/sayonara/sayonara-0.9.2/debian/: changelog  control  copyright  docs  postinst
ornek/sayonara/sayonara-0.9.2/doxygen/: DoxygenLayout.xml  doxygen_config.cfg  groups.h
ornek/sayonara/sayonara-0.9.2/resources/: CMakeLists.txt  changelog  player.db  sayonara.appdata.xml  sayonara.desktop
ornek/sayonara/sayonara-0.9.2/resources/manpage/: sayonara.1
ornek/sayonara/sayonara-0.9.2/src/: CMakeLists.txt  Main.cpp
ornek/sayonara/sayonara-0.9.2/src/Application/: CMakeLists.txt  InstanceThread.cpp  InstanceThread.h  application.cpp  application.h
ornek/sayonara/sayonara-0.9.2/src/Components/: CMakeLists.txt
ornek/sayonara/sayonara-0.9.2/src/Components/Bookmarks/: Bookmark.cpp  Bookmark.h  Bookmarks.cpp  Bookmarks.h  CMakeLists.txt
ornek/sayonara/sayonara-0.9.2/src/Components/Broadcasting/: CMakeLists.txt  StreamDataSender.cpp  StreamDataSender.h  StreamHttpParser.cpp  (+5 more)
ornek/sayonara/sayonara-0.9.2/src/Database/: AbstractDatabase.cpp  AbstractDatabase.h  AllDatabase.cpp  CMakeLists.txt  DatabaseAlbums.cpp  DatabaseAlbums.h  DatabaseArtists.cpp  DatabaseArtists.h  DatabaseBookmarks.cpp  DatabaseBookmarks.h  DatabaseConnector.cpp  DatabaseConnector.h  DatabaseHandler.cpp  DatabaseHandler.h  DatabaseLibrary.cpp  DatabaseLibrary.h  DatabaseModule.cpp  DatabaseModule.h  DatabasePlaylist.cpp  DatabasePlaylist.h  DatabasePodcasts.cpp  DatabasePodcasts.h  DatabaseSettings.cpp  DatabaseSettings.h  DatabaseStreams.cpp  DatabaseStreams.h  DatabaseTracks.cpp  DatabaseTracks.h  DatabaseVisStyles.cpp  DatabaseVisStyles.h  LibraryDatabase.cpp  LibraryDatabase.h  SayonaraQuery.cpp  SayonaraQuery.h
ornek/sayonara/sayonara-0.9.2/src/GUI/: CMakeLists.txt
ornek/sayonara/sayonara-0.9.2/src/Helper/: CMakeLists.txt  EqualizerPresets.cpp  EqualizerPresets.h  FileHelper.cpp  FileHelper.h  Filter.h  Helper.cpp  Helper.h  LibrarySearchMode.cpp  LibrarySearchMode.h  Set.cpp  Set.h  Tree.cpp  Tree.h  UrlHelper.cpp  UrlHelper.h  globals.h
ornek/sayonara/sayonara-0.9.2/src/Interfaces/: CMakeLists.txt
ornek/sayonara/sayonara-0.9.2/src/Languages/: CMakeLists.txt  languages.html  sayonara_lang.ts.template  sayonara_lang_br.ts  sayonara_lang_cs.ts  sayonara_lang_de.ts  sayonara_lang_en.ts  sayonara_lang_es.ts  sayonara_lang_fr.ts  sayonara_lang_hu.ts  sayonara_lang_it.ts  sayonara_lang_pl.ts  sayonara_lang_pt.ts  sayonara_lang_ro.ts  sayonara_lang_ru.ts  sayonara_lang_ua.ts  sayonara_lang_zh_cn.ts
(+983 files in other folders)
