CMAKE_MINIMUM_REQUIRED(VERSION 2.7)
PROJECT("Sayonara Player")

set (CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}")
INCLUDE(cotire)
SET(VAR_SAYONARA_VERSION "0.9.2")

ADD_DEFINITIONS( -DSAYONARA_VERSION=\"${VAR_SAYONARA_VERSION}\" )

ADD_DEFINITIONS( -DSAYONARA_INSTALL_PATH=\"${CMAKE_INSTALL_PREFIX}\" )
ADD_DEFINITIONS( -DSAYONARA_INSTALL_LIB_PATH=\"${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX}/sayonara/\" )
ADD_DEFINITIONS( -DSAYONARA_INSTALL_BIN_PATH=\"${CMAKE_INSTALL_PREFIX}/bin/\" )
ADD_DEFINITIONS( -DSAYONARA_INSTALL_SHARE_PATH=\"${CMAKE_INSTALL_PREFIX}/share/sayonara/\" )

MESSAGE("Build Sayonara ${VAR_SAYONARA_VERSION}")
MESSAGE("Will install to ${CMAKE_INSTALL_PREFIX}")

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(resources)

SET(CMAKE_SKIP_RPATH:BOOL ON)
SET(CMAKE_INSTALL_MANIFEST "install_manifest.txt")

IF(${UNIX})
	execute_process(COMMAND update-menus)
ENDIF(${UNIX})
