@YELP_HELP_RULES@
HELP_ID = girl
HELP_FILES = aboutprogram.page aboutstation.page exit.page index.page intro.page legal.xml listen.page new.page next.page prev.page record.page search.page stations.page
HELP_MEDIA = media/girl-aboutprogram.png media/girl-aboutstation.png media/girl-exit.png media/girl-listen.png media/girl-main.png media/girl-new.png media/girl-newstation.png media/girl-next-station.png media/girl-prev-station.png media/girl-prev-station.png media/girl-record.png media/girl-search-station-by-location.png media/girl-select-station.png media/girl-stations.png media/girl-stop.png
HELP_LINGUAS = cs de es en_US sv
-include $(top_srcdir)/git.mk
