CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(say_comp_playmanager)

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}
	${CMAKE_CURRENT_BINARY_DIR}
)

SET(SOURCES
    PlayManager.cpp
)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME}
    say_helper_settings
    say_interfaces_notifications
)
