CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

ADD_SUBDIRECTORY(Generic)

ADD_SUBDIRECTORY(AudioConverter)
ADD_SUBDIRECTORY(Bookmarks)
ADD_SUBDIRECTORY(Broadcasting)
ADD_SUBDIRECTORY(Crossfader)
ADD_SUBDIRECTORY(Engine)
ADD_SUBDIRECTORY(Equalizer)
ADD_SUBDIRECTORY(PlaylistChooser)
ADD_SUBDIRECTORY(Speed)
ADD_SUBDIRECTORY(Stream)

